# dz_django

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: pylint.yml
myproject/: settings.py
server/: asgi.py  urls.py  wsgi.py
server/apps/tracking/: admin.py  apps.py  logger_middleware.py  models.py  my_middleware.py  serializers.py  urls.py  utils.py  views.py
server/apps/tracking/management/commands/: __init__.py  mycommand.py
server/apps/tracking/migrations/: 0001_initial.py  0002_category_alter_operation_operation_at_and_more.py  0003_alter_operation_operation_at.py  0004_alter_operation_operation_at.py  0005_alter_operation_operation_at.py
server/apps/tracking/templates/tracking/: index.html
server/settings/enviroments/: base.py
tests/: test_simple.py
