[tool.poetry]
name = "dz-django"
version = "0.1.0"
description = "Задания на дом"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
python-decouple = "^3.8"
djangorestframework = "^3.15.2"
django-rest-swagger = "^2.2.0"
drf-yasg = "^1.21.8"
setuptools = "^75.6.0"
pytest-django = "^4.9.0"
autopep8 = "^2.3.1"
flake8 = "^7.1.1"
wemake-python-styleguide = "^0.19.2"
mypy = "^1.13.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
